<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinator"
    tools:context=".MainActivity">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:id="@+id/progress_circular"
            />

        <include layout="@layout/toolbar"
            android:id="@+id/toolbar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_below="@+id/toolbar"
            android:gravity="center"
            android:id="@+id/linear1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"

                android:contentDescription="@string/confirmed"
                android:src="@drawable/virus" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:text="@string/desc"/>
           

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonline"
            android:layout_below="@+id/linear1"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/edittext"
                android:inputType="textCapSentences"
                android:imeOptions="actionSearch"
                android:gravity="center"
                android:background="@drawable/profile_back_button"
                android:hint="@string/hint"
                android:autofillHints="" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:contentDescription="@string/fab_content_desc"
                app:srcCompat="@drawable/ic_search_black_24dp"/>


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/buttonline"

            android:id="@+id/lin2"
            android:orientation="vertical"
            android:background="@drawable/layout_border"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/last_checked"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:id="@+id/time_stamp"
                    android:fontFamily="@font/abel"
                    android:text="@string/dates"
                    android:textSize="15sp" />
                

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:orientation="horizontal"                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/confirmed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirmed"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:text="@string/loading"/>
                </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/recovered"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/rec"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/loading"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/deaths"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/d_count"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp"
                    android:text="@string/loading"/>
            </LinearLayout>


        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:id="@+id/search_button"/>



    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>